<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:exp="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.mikesu.horizontalexpcalendar.HorizontalExpCalendar
            android:id="@+id/expCalender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            exp:bottom_container_height="@dimen/_50sdp"
            exp:center_container_expanded_height="@dimen/_220sdp"
            exp:top_container_height="@dimen/_50sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/expCalender"
            android:layout_marginTop="-20dp"
            android:background="@drawable/carved_background"
            android:elevation="@dimen/_5sdp"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView_salat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/fajr" />

                <TextView
                    android:id="@+id/tv_fajr"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="05:00 AM"
                    style="@style/TextView_salat_times"
                    />

            </LinearLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:background="#2196F3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView_salat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/aduher" />

                <TextView
                    android:id="@+id/tv_aduhr"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="05:00 AM"
                    style="@style/TextView_salat_times"
                    />

            </LinearLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:background="#2196F3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView_salat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/asr" />

                <TextView
                    android:id="@+id/tv_asr"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="05:00 AM"
                    style="@style/TextView_salat_times"
                    />

            </LinearLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:background="#2196F3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView_salat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/maghreb" />

                <TextView
                    android:id="@+id/tv_maghreb"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="05:00 AM"
                    style="@style/TextView_salat_times"
                    />

            </LinearLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:background="#2196F3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView_salat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/esha" />

                <TextView
                    android:id="@+id/tv_esha"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="05:00 AM"
                    style="@style/TextView_salat_times"
                    />

            </LinearLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:background="#2196F3" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sunrise" />

                    <TextView
                        android:id="@+id/tv_sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:text="05:33 Am"
                        style="@style/TextView_salat_times"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sunset" />

                    <TextView
                        android:id="@+id/tv_sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:text="05:33 Am"
                        style="@style/TextView_salat_times"
                        />


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_3sdp"
                android:background="@color/purple_500" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginVertical="@dimen/_3sdp"
                android:background="@color/purple_500" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginHorizontal="@dimen/_50sdp"
                android:layout_marginVertical="@dimen/_3sdp"
                android:background="@color/purple_500" />




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_40ssp"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/ic_location"
                    app:tint="@color/purple_500" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/getting_your_address"
                    style="@style/TextView_salat"
                    android:textColor="@color/black"/>
            </LinearLayout>


        </LinearLayout>



        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:id="@+id/progressbar_spin_kit"
            android:visibility="visible"
            app:cardElevation="@dimen/_12sdp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_centerInParent="true"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.github.ybq.android.spinkit.SpinKitView
                    style="@style/SpinKitView.FadingCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_20sdp"
                    android:id="@+id/spin_Kit"
                    android:layout_gravity="center"
                    app:SpinKit_Color="@color/purple_500" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progress_text"
                    android:layout_margin="@dimen/_5sdp"
                    android:textStyle="bold"
                    android:text="Getting Location.."/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>



    </RelativeLayout>


</androidx.core.widget.NestedScrollView>
